Dropdown for courses

--- a/03-class/khanAcademy/index.html
+++ b/03-class/khanAcademy/index.html
@@ -13,16 +13,20 @@
 
     <header>
         <nav>
-            <ul class="flex">
-                <li class="nav-left nav-left-1"><a href="#">Courses</a></li>
-                <li class="nav-left nav-left-2">
-                    <input type="search" id="search-bar" placeholder="search">
-                </li>
-                <li class="center-h"><a href="./index.html">Khan Academy</a></li>
-                <li><a href="#">Donate</a></li>
-                <li><a href="#">Login</a></li>
-                <li><a href="#">Sign Up</a></li>
-            </ul>
+            <div>
+                <div>
+                    <select class="nav-dropdown" name="courses" id="courses">
+                        <option value="">Courses</option>
+                        <option value="maths">Maths</option>
+                        <option value="science">Science</option>
+                        <option value="coding">Coding</option>
+                        <option value="business">Business</option>
+                        <option value="misc"> Misc</option>
+                    </select>
+                </div>
+                <div></div>
+                <div></div>
+            </div>
         </nav>
     </header>
 
