--- a/03-class/khanAcademy/index.html
+++ b/03-class/khanAcademy/index.html
@@ -13,9 +13,9 @@
 
     <header>
         <nav>
-            <div>
+            <div class="flex flex-sbt">
                 <div>
-                    <select class="nav-dropdown" name="courses" id="courses">
+                    <select class="courses-dropdown" name="courses" id="courses">
                         <option value="">Courses</option>
                         <option value="maths">Maths</option>
                         <option value="science">Science</option>
@@ -23,28 +23,69 @@
                         <option value="business">Business</option>
                         <option value="misc"> Misc</option>
                     </select>
+
+                    <input type="text" placeholder="search">
+
                 </div>
-                <div></div>
-                <div></div>
+
+
+                <div><span>Khan Academy</span></div>
+
+
+                <div>
+                    <ul class="flex flex-sbt">
+                        <li><a>Donate</a></li>
+                        <li><a>Login</a></li>
+                        <li><a>Sign Up</a></li>
+                    </ul>
+                </div>
+
+
             </div>
         </nav>
     </header>
 
-    <section class="hero">
-        <img src="./hero_student.png" alt="headshot image of a female student with two braids, wearing eye glasses and has a beautiful smile">
-        <h1>For every student,<br>every classroom.<br>Real results.</h1>
-        <p>We're a nonprofit with the mission to provide free,<br>education for anyone, anywhere.</p>
-        <ul>
-            <li><a href="#">Learner</a></li>
-            <li><a href="#">Teachers</a></li>
-            <li><a href="#">Districts</a></li>
-            <li><a href="#">Parents</a></li>
-        </ul>
-    </section>
 
-    <section>
-        <h2>Why Khan Academy Works</h2>
-    </section>
+
+    <main>
+
+        <section class="flex flex-c hero">
+
+            <div>
+                <img class="hero-img" src="./hero_student.png" alt="headshot image of a female student with two braids, wearing eye glasses and has a beautiful smile">
+            </div>
+
+
+
+
+            <div>
+
+                <div class="hero-heading">
+                    <h1>For every student,<br>every classroom.<br>Real results.</h1>
+                </div>
+
+
+
+                <div class="hero-para">
+                    <p>We're a nonprofit with the mission to provide free education for anyone, anywhere.</p>
+                </div>
+
+                <div>
+                    <ul class="flex hero-ul">
+                        <li><a href="#">Learner</a></li>
+                        <li><a href="#">Teachers</a></li>
+                        <li><a href="#">Parents</a></li>
+                    </ul>
+                </div>
+
+            </div>
+
+        </section>
+
+        <section class="section-2">
+            <h2>Why Khan Academy Works</h2>
+        </section>
+    </main>
 
 </body>
 </html>
