Give breathing space to right part of nav

--- a/03-class/khanAcademy/index.html
+++ b/03-class/khanAcademy/index.html
@@ -29,11 +29,11 @@
                 </div>
 
 
-                <div><span>Khan Academy</span></div>
+                <div class="nav-middle"><span>Khan Academy</span></div>
 
 
                 <div>
-                    <ul class="flex flex-sbt">
+                    <ul class="flex flex-sbt nav-right">
                         <li><a>Donate</a></li>
                         <li><a>Login</a></li>
                         <li><a>Sign Up</a></li>
