--- a/03-class/techCrunch/index.html
+++ b/03-class/techCrunch/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Chrunch</title>
-    <link rel="stylesheet" type="css/text" href="./main.css">
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
     <header>
