Style The Latest part

--- a/03-class/techCrunch/index.html
+++ b/03-class/techCrunch/index.html
@@ -65,44 +65,61 @@
     </div>
 
     
-    <section>
-        <h2>The Latest</h2>
+    <section class="latest-content">
+        <h2 class="latest-heading">The Latest</h2>
         <div>
-            <article>
+            <article class="flex">
+                <div>
 
-                <h3>Snapchat says it's getting better at finding illicit drug dealer before users do
-                </h3>
+                    <h3>Snapchat says it's getting better at finding illicit drug dealer before users do
+                    </h3>
 
-                <span>Taylor Hatmaker</span>
-                <span>11:15AM PST January 18, 2022</span>
+                    <span>Taylor Hatmaker</span><br>
+                    <span>11:15AM PST January 18, 2022</span>
+                </div>
 
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error iusto assumenda quos pariatur esse architecto, dolorum autem soluta. Porro eveniet laudantium ipsam aspernatur. Placeat obcaecati ex deserunt, similique facilis cum.</p>
-                <img src="#" alt="image filler for article">
+                <div>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error iusto assumenda quos pariatur esse architecto, dolorum autem soluta. Porro eveniet laudantium ipsam aspernatur. Placeat obcaecati ex deserunt, similique facilis cum.</p>
+                </div>
 
-            </article>
+                <div>
+                    <img src="#" alt="image filler for article">
+                </div>
 
-            <article>
-
-                <h3>Will quantum computing remain the domain of the specialist VC?</h3>
-
-                <span>Taylor Hatmaker</span>
-                <span>11:15AM PST January 18, 2022</span>
-
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error iusto assumenda quos pariatur esse architecto, dolorum autem soluta. Porro eveniet laudantium ipsam aspernatur. Placeat obcaecati ex deserunt, similique facilis cum.</p>
-                <img src="#" alt="image filler for article">
 
             </article>
 
-            <article>
+            <article class="flex">
 
-                <h3>Ex-Dispo founding members lauch ROll app, where creators post exclusive content</h3>
+                <div>
+                    <h3>Will quantum computing remain the domain of the specialist VC?</h3>
+                    <span>Taylor Hatmaker</span><br>
+                    <span>11:15AM PST January 18, 2022</span>
+                </div>
+                <div>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error iusto assumenda quos pariatur esse architecto, dolorum autem soluta. Porro eveniet laudantium ipsam aspernatur. Placeat obcaecati ex deserunt, similique facilis cum.</p>
+                </div>
 
-                <span>Taylor Hatmaker</span>
-                <span>11:15AM PST January 18, 2022</span>
+                <div>
+                    <img src="#" alt="image filler for article">
+                </div>
 
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error iusto assumenda quos pariatur esse architecto, dolorum autem soluta. Porro
-                    <img src="#" alt="image filler for article"> eveniet laudantium ipsam aspernatur. Placeat obcaecati ex deserunt, similique facilis cum.</p>
-                <img src="#" alt="image filler for article">
+            </article>
+
+            <article class="flex">
+
+                <div>
+                    <h3>Ex-Dispo founding members lauch ROll app, where creators post exclusive content</h3>
+                    <span>Taylor Hatmaker</span><br>
+                    <span>11:15AM PST January 18, 2022</span>
+                </div>
+
+                <div>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error iusto assumenda quos pariatur esse architecto, dolorum autem soluta. Porro</p>
+                </div>
+
+                <div><img src="#" alt="image filler for article"> 
+                </div>
 
             </article>
         </div>
