--- a/08-class/homework/level-ground/index.html
+++ b/08-class/homework/level-ground/index.html
@@ -10,23 +10,25 @@
 		<link rel="stylesheet" href="./main.css">
 	</head>
 	<body>
-        <header>
-            <div>
-                <a href="./index.html">Classes</a>
-                <a href="./index.html">Hire Us</a>
-                <a href="./index.html">LG</a>
-                <a href="./index.html">DONATE</a>
-            </div>
+        <div class="bg-dark">
+            <header>
+                <div>
+                    <a href="./index.html">Classes</a>
+                    <a href="./index.html">Hire Us</a>
+                    <a href="./index.html">LG</a>
+                    <a href="./index.html">DONATE</a>
+                </div>
 
-        </header>
+            </header>
 
-        <main>
-            <h1>WHERE GRIT MEETS OPPURTUNITY</h1>
-            <p>At Level Ground (LG), urban youth cultivate grit and resilience through Mixed Martial Arts. They learn to apply these values 'off the mat' in the pursuit of their ambitions through our Student Trainer Certification and College Access programs.</p>
-            <a href="./index.html">Watch the Vide</a>
+            <main>
+                <h1>WHERE GRIT MEETS OPPURTUNITY</h1>
+                <p>At Level Ground (LG), urban youth cultivate grit and resilience through Mixed Martial Arts. They learn to apply these values 'off the mat' in the pursuit of their ambitions through our Student Trainer Certification and College Access programs.</p>
+                <a href="./index.html">Watch the Vide</a>
 
 
-        </main>
+            </main>
+        </div>
 
 
 
@@ -39,7 +41,7 @@
 
 
 
-        <section>
+        <section class="bg-lite">
             <div>
                 <img src="#" alt="placeholder">
                 <h3>VISIT THE GYM</h3>
