Complete basic layout

--- a/08-class/homework/level-ground/index.html
+++ b/08-class/homework/level-ground/index.html
@@ -10,78 +10,93 @@
 		<link rel="stylesheet" href="./main.css">
 	</head>
 	<body>
-        <div class="bg-dark">
-            <header>
-                <div>
-                    <a href="./index.html">Classes</a>
-                    <a href="./index.html">Hire Us</a>
-                    <a href="./index.html">LG</a>
-                    <a href="./index.html">DONATE</a>
+        <div class="mega-wrapper">
+            <div class="bg-dark">
+                <header class="max-screen">
+                    <nav class="flex">
+                        <div class="flex nav-lt">
+                            <a href="./index.html">CLASSES</a>
+                            <a href="./index.html">HIRE US</a>
+                        </div>
+
+                        <div>
+                            <a href="./index.html">LG</a>
+                        </div>
+
+                        <div>
+                            <a class="btn-nav" href="./index.html">DONATE</a>
+                        </div>
+                    </nav>
+
+                </header>
+
+                <div class="max-screen">
+                        <main class="txt-cntr flex-col">
+                        <h1>WHERE GRIT MEETS OPPURTUNITY</h1>
+                        <p class="max-m-ch">At Level Ground (LG), urban youth cultivate grit and resilience through Mixed Martial Arts. They learn to apply these values 'off the mat' in the pursuit of their ambitions through our Student Trainer Certification and College Access programs.</p>
+                        <a href="./index.html">Watch the Vide</a>
+
+
+                    </main>
+                </div>
+            </div>
+
+
+
+            <section class="why-sec flex-col txt-cntr why max-screen">
+                <h2>WHY</h2>
+                <p class="max-s-ch">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat temporibus dolores deleniti rem fugiat, libero perspiciatis officiis reprehenderit! Reprehenderit quibusdam iure iusto sint explicabo nulla, similique quasi, et qui dolorem esse. Beatae maxime, magnam facere modi aliquid hic iusto ratione!</p>
+
+            </section>
+
+
+
+
+            <div class="offer bg-lite">
+                <div class="flex sp-ar max-screen">
+                    <section class="flex-col txt-cntr max-s-ch">
+                        <img src="#" alt="placeholder">
+                        <h3>VISIT THE GYM</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere repudiandae enim amet et asperiores aliquid a. Ipsum dolorem facere, voluptatem soluta rerum eum deleniti in molestiae exercitationem aliquid cumque enim?</p>
+                        <a class="btn-offer" href="./index.html">SEE CLASSES</a>
+
+                    </section>
+
+
+                    <section class="flex-col txt-cntr max-s-ch">
+                        <img src="#" alt="placeholder">
+                        <h3>HAVE US VISIT YOU</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere repudiandae enim amet et asperiores aliquid a. Ipsum dolorem facere, voluptatem soluta rerum eum deleniti in molestiae exercitationem aliquid cumque enim?</p>
+                        <a class="btn-offer" href="./index.html">HIRE US</a>
+
+                    </section>
                 </div>
 
-            </header>
 
-            <main>
-                <h1>WHERE GRIT MEETS OPPURTUNITY</h1>
-                <p>At Level Ground (LG), urban youth cultivate grit and resilience through Mixed Martial Arts. They learn to apply these values 'off the mat' in the pursuit of their ambitions through our Student Trainer Certification and College Access programs.</p>
-                <a href="./index.html">Watch the Vide</a>
+            </div>
 
 
-            </main>
+
+
+            <div>
+                <section class=" volunteer-sec flex-col txt-cntr max-screen">
+                <h2>VOLUNTEER WITH LEVEL GROUND</h2>
+                <p class="max-s-ch">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi architecto atque officia non suscipit est enim, dolore accusamus, maiores velit repellendus hic sit aliquam dolorum eum cumque voluptatem eligendi. Deserunt saepe quis cumque cupiditate consequatur!</p>
+                <a class="btn-offer" href="./index.html">VOLUNTEER</a>
+
+                </section>
+            </div>
+
+
+
+            <footer>
+
+            </footer>
+
+
+
+
+            
         </div>
-
-
-
-        <section>
-            <h2>WHY</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat temporibus dolores deleniti rem fugiat, libero perspiciatis officiis reprehenderit! Reprehenderit quibusdam iure iusto sint explicabo nulla, similique quasi, et qui dolorem esse. Beatae maxime, magnam facere modi aliquid hic iusto ratione!</p>
-
-        </section>
-
-
-
-
-        <section class="bg-lite">
-            <div>
-                <img src="#" alt="placeholder">
-                <h3>VISIT THE GYM</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere repudiandae enim amet et asperiores aliquid a. Ipsum dolorem facere, voluptatem soluta rerum eum deleniti in molestiae exercitationem aliquid cumque enim?</p>
-                <a href="./index.html">SEE CLASSES</a>
-
-            </div>
-
-
-            <div>
-                <img src="#" alt="placeholder">
-                <h3>HAVE US VISIT YOU</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere repudiandae enim amet et asperiores aliquid a. Ipsum dolorem facere, voluptatem soluta rerum eum deleniti in molestiae exercitationem aliquid cumque enim?</p>
-                <a href="./index.html">HIRE US</a>
-
-            </div>
-
-
-        </section>
-
-
-
-
-        <section>
-
-            <h2>VOLUNTEER WITH LEVEL GROUND</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi architecto atque officia non suscipit est enim, dolore accusamus, maiores velit repellendus hic sit aliquam dolorum eum cumque voluptatem eligendi. Deserunt saepe quis cumque cupiditate consequatur!</p>
-            <a href="./index.html">VOLUNTEER</a>
-
-        </section>
-
-
-
-        <footer>
-
-        </footer>
-
-
-
-
-		
-    </body>
+</body>
 </html>
