Limit max screen width

--- a/08-class/homework/source/index.html
+++ b/08-class/homework/source/index.html
@@ -25,8 +25,8 @@
 
 
 			<div class="head-main-wrapper">
-				<header>
-					<nav class="flex align-items-b justify-sb">
+				<header class="max-screen">
+					<nav  class="flex align-items-b justify-sb">
 						<div class="logo-wrapper">
 							<a href="./index.html">Source</a>
 						</div>
@@ -49,7 +49,7 @@
 
 				</header>
 				
-				<main class="padding-left">
+				<main class="padding-left max-screen">
 
 					<div class="flex justify-sb align-items-c">
 
@@ -69,7 +69,7 @@
 
 				</main>
 
-				<section class="padding-left">
+				<section class="padding-left max-screen">
 					<div class="flex justify-sb wrapper-features">
 						<div>
 							<i class="gg-alarm"></i>
@@ -101,7 +101,7 @@
 			</div>
 
 
-			<section class="padding-left">
+			<section class="padding-left max-screen">
 				<div class="section-info">
 					<h2>Collecting information about the problem</h2>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti saepe molestias perferendis impedit quasi?</p>
