Make the site mobile-friendly

--- a/08-class/homework/source/index.html
+++ b/08-class/homework/source/index.html
@@ -3,7 +3,7 @@
 	<head>
   	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Level Ground</title>
+    <title>Source</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="./normalize.css">
@@ -24,10 +24,10 @@
         <div class="mega-wrapper flex-maxscreen">
 
 
-			<div class="head-main-wrapper flex-c">
+			<div class="head-main-wrapper flex-c align-items-c">
 				<div>
 					<header>
-						<nav  class="flex align-items-b justify-sb">
+						<nav class="flex align-items-b justify-sb">
 							<div class="logo-wrapper">
 								<a href="./index.html">Source</a>
 							</div>
@@ -50,7 +50,7 @@
 
 					</header>
 					
-					<main class="padding-left max-screen">
+					<main class="padding-left max-screen m-auto">
 
 						<div class="flex justify-sb align-items-c">
 
@@ -103,8 +103,8 @@
 			</div>
 
 
-			<section class="padding-left max-screen ">
-				<div class="section-info">
+			<section class="wrapper-info padding-left max-screen ">
+				<div class="info">
 					<h2>Collecting information about the problem</h2>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti saepe molestias perferendis impedit quasi?</p>
 				</div>
