--- a/10-class/10-homework/restaurant/index.html
+++ b/10-class/10-homework/restaurant/index.html
@@ -12,6 +12,7 @@
 	<!-- external CSS link -->
 	<link rel="stylesheet" href="./css/mynormreset.css">
 	<link rel="stylesheet" href="./css/main.css">
+	<script src="./js/main.js" defer></script>
 </head>
 
 <body>
@@ -21,19 +22,27 @@
 		------------------------------------------------------------
 	 -->
 	<header class="primary-header bg-primary">
-		<div class="wrapper ">
-			<nav class="primary-nav">
-				<ul role="list" class="flex nav-list">
-					<li><a href="./index.html">Home</a></li>
-					<li><a href="./index.html">Abous Us</a></li>
-					<li><a href="./index.html">Menu</a></li>
-					<li><a href="./index.html">Order Now</a></li>
-					<li><a href="./index.html">Blog</a></li>
-					<li><a href="./index.html">Location</a></li>
-					<li><a href="./index.html">Cart</a></li>
-					<li><a href="./index.html">Search</a></li>
-				</ul>
-			</nav>
+		<div class="wrapper">
+			<div class="nav-wrapper flex">
+
+				<div><a href="./index.html"><span>Logo</span></a></div>
+				<button class="mobile-nav-toggle" aria-controls="primary-nav" aria-expanded="false">
+					<img src="./images/ham-open.svg" alt="" class="ham-icon ham-open">
+					<img src="./images/ham-close.svg" alt="" class="ham-icon ham-close">
+				</button>
+				<nav class="primary-nav">
+					<ul role="list" class="flex nav-list">
+						<li><a href="./index.html">Home</a></li>
+						<li><a href="./index.html">Abous Us</a></li>
+						<li><a href="./index.html">Menu</a></li>
+						<li><a href="./index.html">Order Now</a></li>
+						<li><a href="./index.html">Blog</a></li>
+						<li><a href="./index.html">Location</a></li>
+						<li><a href="./index.html">Cart</a></li>
+						<li><a href="./index.html">Search</a></li>
+					</ul>
+				</nav>
+			</div>
 		</div>
 	</header>
 
@@ -50,7 +59,7 @@
 				<h1 class="fs-primary-heading fw-bold text-primary-400">Welcome To Our Cuising Restaurant</h1>
 				<div class="input-wrapper flex">
 					<input class="input search" type="text" placeholder="search here"><button
-						class="btn btn-location ff-btn bg-400 text-accent-0">Location</button>
+						class="btn btn-location ff-btn">Location</button>
 				</div>
 
 			</div>
@@ -73,7 +82,7 @@
 				id impedit vel ratione? Odio dolorum quo possimus!</p>
 			<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus esse quos fuga voluptatibus
 				laudantium consequatur officia nostrum.</p>
-			<button class="btn ff-btn bg-400 text-accent-0">Discover Menu</button>
+			<button class="btn ff-btn">Discover Menu</button>
 		</div>
 	</section>
 
