--- a/10-class/10-homework/restaurant/index.html
+++ b/10-class/10-homework/restaurant/index.html
@@ -21,27 +21,29 @@
 		HEADER SECTION
 		------------------------------------------------------------
 	 -->
-	<header class="primary-header bg-primary">
-		<div class="wrapper">
-			<div class="nav-wrapper flex">
+	<header class="primary-header">
+		<div class="bg-primary">
+			<div class="wrapper">
+				<div class="nav-wrapper flex">
 
-				<div><a href="./index.html"><span>Logo</span></a></div>
-				<button class="mobile-nav-toggle" aria-controls="primary-nav" aria-expanded="false">
-					<img src="./images/ham-open.svg" alt="" class="ham-icon ham-open">
-					<img src="./images/ham-close.svg" alt="" class="ham-icon ham-close">
-				</button>
-				<nav class="primary-nav">
-					<ul role="list" class="flex nav-list">
-						<li><a href="./index.html">Home</a></li>
-						<li><a href="./index.html">Abous Us</a></li>
-						<li><a href="./index.html">Menu</a></li>
-						<li><a href="./index.html">Order Now</a></li>
-						<li><a href="./index.html">Blog</a></li>
-						<li><a href="./index.html">Location</a></li>
-						<li><a href="./index.html">Cart</a></li>
-						<li><a href="./index.html">Search</a></li>
-					</ul>
-				</nav>
+					<div><a href="./index.html"><span>Logo</span></a></div>
+					<button class="mobile-nav-toggle" aria-controls="primary-nav" aria-expanded="false">
+						<img src="./images/ham-open.svg" alt="" class="ham-icon ham-open">
+						<img src="./images/ham-close.svg" alt="" class="ham-icon ham-close">
+					</button>
+					<nav class="primary-nav">
+						<ul role="list" class="flex nav-list">
+							<li><a href="./index.html">Home</a></li>
+							<li><a href="./index.html">Abous Us</a></li>
+							<li><a href="./index.html">Menu</a></li>
+							<li><a href="./index.html">Order Now</a></li>
+							<li><a href="./index.html">Blog</a></li>
+							<li><a href="./index.html">Location</a></li>
+							<li><a href="./index.html">Cart</a></li>
+							<li><a href="./index.html">Search</a></li>
+						</ul>
+					</nav>
+				</div>
 			</div>
 		</div>
 	</header>
