Add spacing using flow class

--- a/10-class/10-homework/restaurant/index.html
+++ b/10-class/10-homework/restaurant/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-	<!-- 
+	<!--
 		------------------------------------------------------------
 		HEADER SECTION
 		------------------------------------------------------------
@@ -50,14 +50,14 @@
 
 
 
-	<!-- 
+	<!--
 		------------------------------------------------------------
 		WELCOME HERO SECTION
 		------------------------------------------------------------
 	 -->
 	<main>
-		<section class="bg-primary padding-block-900">
-			<div class="wrapper bg-primary">
+		<section class="bg-primary padding-block-900 ">
+			<div class="wrapper bg-primary flow">
 				<h1 class="fs-primary-heading fw-bold text-primary-400">Welcome To Our Cuising Restaurant</h1>
 				<div class="input-wrapper flex">
 					<input class="input search" type="text" placeholder="search here"><button
@@ -69,7 +69,7 @@
 	</main>
 
 
-	<!-- 
+	<!--
 		------------------------------------------------------------
 		DISCOVER - ABOUT US
 		------------------------------------------------------------
@@ -78,18 +78,21 @@
 	<section class="padding-block-900">
 		<div class="wrapper">
 			<a href="#">About Us</a>
-			<h2 class="fs-secondary-heading fw-bold text-primary-400">Discover Our Restaurant Story</h2>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quidem voluptatem qui labore sint
-				voluptate, assumenda quam, natus dolorem eveniet facilis quis error doloremque tempora, recusandae quae
-				id impedit vel ratione? Odio dolorum quo possimus!</p>
-			<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus esse quos fuga voluptatibus
-				laudantium consequatur officia nostrum.</p>
-			<button class="btn ff-btn">Discover Menu</button>
+			<div class="flow">
+				<h2 class="fs-secondary-heading fw-bold text-primary-400">Discover Our Restaurant Story</h2>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quidem voluptatem qui labore sint
+					voluptate, assumenda quam, natus dolorem eveniet facilis quis error doloremque tempora, recusandae
+					quae
+					id impedit vel ratione? Odio dolorum quo possimus!</p>
+				<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus esse quos fuga voluptatibus
+					laudantium consequatur officia nostrum.</p>
+				<button class="btn ff-btn">Discover Menu</button>
+			</div>
 		</div>
 	</section>
 
 
-	<!-- 
+	<!--
 		------------------------------------------------------------
 		OUR SPECIAL CUISINE
 		------------------------------------------------------------
@@ -99,83 +102,92 @@
 	<section class="bg-primary padding-block-900">
 		<div class="wrapper">
 			<a href="#">Order Online Now</a>
-			<h2 class="fs-secondary-heading fw-bold text-primary-400">Our Speciality Cuisine</h2>
-			<div>
-				<div class="flex">
-					<ul role="list" class="flex">
-						<li><a href="#">Breakfast</a></li>
-						<li><a href="#">Lunch</a></li>
-						<li><a href="#">Dinner</a></li>
-						<li><a href="#">Dessert</a></li>
-						<li><a href="#">Shake</a></li>
-					</ul>
-				</div>
-				<div class="wrapper-cuisines flex-c">
-					<div>
-						<ul role="list" class="flex cuisine-list">
-							<li>
-								<div><a href="#"><img src="" alt=""></a></div>
-							</li>
-							<li>
-								<div><a href="#"><img src="" alt=""></a></div>
-							</li>
-							<li>
-								<div><a href="#"><img src="" alt=""></a></div>
-							</li>
-							<li>
-								<div><a href="#"><img src="" alt=""></a></div>
-							</li>
+			<div class="flow">
+				<h2 class="fs-secondary-heading fw-bold text-primary-400">Our Speciality Cuisine</h2>
+				<div class="flow">
+					<div class="flex">
+						<ul role="list" class="flex">
+							<li><a href="#">Breakfast</a></li>
+							<li><a href="#">Lunch</a></li>
+							<li><a href="#">Dinner</a></li>
+							<li><a href="#">Dessert</a></li>
+							<li><a href="#">Shake</a></li>
 						</ul>
 					</div>
-					<div>
-						<ul role="list" class="flex cuisine-list">
-							<li>
-								<div><a href="#"><img src="" alt=""></a></div>
-							</li>
-							<li>
-								<div><a href="#"><img src="" alt=""></a></div>
-							</li>
-							<li>
-								<div><a href="#"><img src="" alt=""></a></div>
-							</li>
-							<li>
-								<div><a href="#"><img src="" alt=""></a></div>
-							</li>
-						</ul>
+					<div class="wrapper-cuisines flex-c">
+						<div>
+							<ul role="list" class="flex cuisine-list">
+								<li>
+									<div><a href="#"><img src="" alt=""></a></div>
+								</li>
+								<li>
+									<div><a href="#"><img src="" alt=""></a></div>
+								</li>
+								<li>
+									<div><a href="#"><img src="" alt=""></a></div>
+								</li>
+								<li>
+									<div><a href="#"><img src="" alt=""></a></div>
+								</li>
+							</ul>
+						</div>
+						<div>
+							<ul role="list" class="flex cuisine-list">
+								<li>
+									<div><a href="#"><img src="" alt=""></a></div>
+								</li>
+								<li>
+									<div><a href="#"><img src="" alt=""></a></div>
+								</li>
+								<li>
+									<div><a href="#"><img src="" alt=""></a></div>
+								</li>
+								<li>
+									<div><a href="#"><img src="" alt=""></a></div>
+								</li>
+							</ul>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 
-	<!-- 
+	<!--
 		------------------------------------------------------------
 		OPENING HOURS
 		------------------------------------------------------------
 	 -->
 	<section class="padding-block-900">
-		<div class="wrapper">
+		<div class="wrapper open">
 			<a href="#">Book Table</a>
-			<h2 class="fs-secondary-heading fw-bold text-primary-400">Opening Hours</h2>
-			<div>phone</div>
-			<span>Call Now</span>
-			<div>+123456789</div>
-			<div>
+			<div class="flow">
+				<h2 class="fs-secondary-heading fw-bold text-primary-400">Opening Hours</h2>
 				<div>
-					<p>Monday to Tuesday</p>
-					<p>09:00 am - 11:00 pm</p>
+					<div>phone</div>
+					<span>Call Now</span>
+					<div>+123456789</div>
 				</div>
-				<div>
-					<p>Wednesday to Sunday</p>
-					<p>11:00 am - 10:00 pm</p>
+				<div class="open--days flex">
+					<div>
+						<p>Monday to Tuesday</p>
+						<p>09:00 am - 11:00 pm</p>
+					</div>
+					<div>
+						<p>Wednesday to Sunday</p>
+						<p>11:00 am - 10:00 pm</p>
+					</div>
 				</div>
+
 				<div><img src="" alt=""></div>
+
+
 			</div>
 		</div>
 	</section>
 
 
-	<!-- 
+	<!--
 		------------------------------------------------------------
 		CUSTOMER SAY
 		------------------------------------------------------------
@@ -198,7 +210,7 @@
 
 
 
-	<!-- 
+	<!--
 		------------------------------------------------------------
 		FOOTER SECTION
 		------------------------------------------------------------
