--- a/10-class/10-homework/restaurant/index.html
+++ b/10-class/10-homework/restaurant/index.html
@@ -21,6 +21,7 @@
 		HEADER SECTION
 		------------------------------------------------------------
 	 -->
+
 	<header class="primary-header">
 		<div class="bg-primary">
 			<div class="wrapper">
@@ -196,14 +197,16 @@
 	<section class="padding-block-900">
 		<div class="wrapper">
 			<a href="#">Testimonials</a>
-			<h2 class="fs-secondary-heading fw-bold text-primary-400">Customer Say</h2>
-			<div>
-				<img src="" alt="">
-				<p>Mr. John Smith</p>
-				<span>Art Director</span>
-				<div>*****</div>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non alias praesentium soluta, quidem
-					molestias rem est officiis quaerat a officia optio harum neque sapiente doloribus?</p>
+			<div class="flow">
+				<h2 class="fs-secondary-heading fw-bold text-primary-400">Customer Say</h2>
+				<div>
+					<img src="" alt="">
+					<p>Mr. John Smith</p>
+					<span>Art Director</span>
+					<div>*****</div>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non alias praesentium soluta, quidem
+						molestias rem est officiis quaerat a officia optio harum neque sapiente doloribus?</p>
+				</div>
 			</div>
 		</div>
 	</section>
