--- a/10-class/10-homework/restaurant/index.html
+++ b/10-class/10-homework/restaurant/index.html
@@ -25,7 +25,7 @@
 	<header class="primary-header">
 		<div class="bg-primary">
 			<div class="wrapper">
-				<div class="nav-wrapper flex">
+				<div class="nav-wrapper flex align-items-center">
 
 					<div><a href="./index.html"><span>Logo</span></a></div>
 					<button class="mobile-nav-toggle" aria-controls="primary-nav" aria-expanded="false">
@@ -101,21 +101,20 @@
 
 
 	<section class="bg-primary padding-block-900">
-		<div class="wrapper">
+		<div class="wrapper flex-c wrapper--cuisine align-items-center">
 			<a href="#">Order Online Now</a>
-			<div class="flow">
+			<div class="flow flex-c align-items-center">
 				<h2 class="fs-secondary-heading fw-bold text-primary-400">Our Speciality Cuisine</h2>
-				<div class="flow">
-					<div class="flex">
-						<ul role="list" class="flex">
-							<li><a href="#">Breakfast</a></li>
-							<li><a href="#">Lunch</a></li>
-							<li><a href="#">Dinner</a></li>
-							<li><a href="#">Dessert</a></li>
-							<li><a href="#">Shake</a></li>
-						</ul>
-					</div>
-					<div class="wrapper-cuisines flex-c">
+				<div class="flow flex-c align-items-center">
+					<ul role="list" class="cuisine-times-list flex">
+						<li><a href="#">Breakfast</a></li>
+						<li><a href="#">Lunch</a></li>
+						<li><a href="#">Dinner</a></li>
+						<li><a href="#">Dessert</a></li>
+						<li><a href="#">Shake</a></li>
+					</ul>
+
+					<div class="cuisines-list-wrapper flex-c">
 						<div>
 							<ul role="list" class="flex cuisine-list">
 								<li>
