Center Customer Say section

--- a/10-class/10-homework/restaurant/index.html
+++ b/10-class/10-homework/restaurant/index.html
@@ -159,11 +159,11 @@
 		------------------------------------------------------------
 	 -->
 	<section class="padding-block-900">
-		<div class="wrapper open">
+		<div class="wrapper flex-c align-items-center">
 			<a href="#">Book Table</a>
-			<div class="flow">
+			<div class="flow open flex-c align-items-center">
 				<h2 class="fs-secondary-heading fw-bold text-primary-400">Opening Hours</h2>
-				<div>
+				<div class="flex-c align-items-center">
 					<div>phone</div>
 					<span>Call Now</span>
 					<div>+123456789</div>
@@ -194,16 +194,17 @@
 	 -->
 
 	<section class="padding-block-900">
-		<div class="wrapper">
+		<div class="wrapper flex-c align-items-center">
 			<a href="#">Testimonials</a>
-			<div class="flow">
+			<div class="flow flex-c align-items-center">
 				<h2 class="fs-secondary-heading fw-bold text-primary-400">Customer Say</h2>
-				<div>
+				<div class="flex-c align-items-center">
 					<img src="" alt="">
 					<p>Mr. John Smith</p>
 					<span>Art Director</span>
 					<div>*****</div>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non alias praesentium soluta, quidem
+					<p class="customer-quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non alias
+						praesentium soluta, quidem
 						molestias rem est officiis quaerat a officia optio harum neque sapiente doloribus?</p>
 				</div>
 			</div>
