Style Footer with proper spacing

--- a/10-class/10-homework/restaurant/index.html
+++ b/10-class/10-homework/restaurant/index.html
@@ -215,33 +215,37 @@
 
 	<!--
 		------------------------------------------------------------
-		FOOTER SECTION
+		FOOTER
 		------------------------------------------------------------
 	 -->
 
 	<footer class="bg-primary">
-		<div class="wrapper">
+		<div class="wrapper padding-block-900">
 
-			<div>
-				<div>
+			<div class="flex wrapper-footer">
+				<div class="flow">
 					<span>Divi Cuisine Logo</span>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, temporibus.</p>
 				</div>
-				<div>
+				<div class="flow">
 					<h4>Open Hours</h4>
-					<p>Mon - Fri, 9 AM - 6 PM</p>
+					<div>
+						<p>Mon - Fri, 9 AM - 6 PM</p>
+						<p>Saturday, 9AM - 4 PM</p>
+						<p>Sunday, Closed</p>
+					</div>
 				</div>
-				<p>Saturday, 9AM - 4 PM</p>
-				<p>Sunday, Closed</p>
-				<div>
+				<div class="flow">
 					<h4>Contact Us</h4>
-					<p>170 W street, New York, 10011</p>
-					<p>email: example@mail.com</p>
-					<p>Phone: +99 999 9999</p>
+					<div>
+						<p>170 W street, New York, 10011</p>
+						<p>email: example@mail.com</p>
+						<p>Phone: +99 999 9999</p>
+					</div>
 				</div>
-				<div>
+				<div class="flow">
 					<h4>Subscribe Newsletter</h4>
-					<input type="email" name="" id="">
+					<input type="email" name="" id="" style="display: block;">
 				</div>
 			</div>
 
