Minor Fixes and adjustments

--- a/10-class/10-homework/restaurant/index.html
+++ b/10-class/10-homework/restaurant/index.html
@@ -59,7 +59,7 @@
 	<main>
 		<section class="bg-primary padding-block-900 ">
 			<div class="wrapper bg-primary flow">
-				<h1 class="fs-primary-heading fw-bold text-primary-400">Welcome To Our Cuising Restaurant</h1>
+				<h1 class="fs-primary-heading fw-bold text-primary-400">Welcome <br>To Our Cuisine Restaurant</h1>
 				<div class="input-wrapper flex">
 					<input class="input search" type="text" placeholder="search here"><button
 						class="btn btn-location ff-btn">Location</button>
@@ -79,7 +79,7 @@
 	<section class="padding-block-900">
 		<div class="wrapper">
 			<a href="#">About Us</a>
-			<div class="flow">
+			<div class="flow about-us">
 				<h2 class="fs-secondary-heading fw-bold text-primary-400">Discover Our Restaurant Story</h2>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quidem voluptatem qui labore sint
 					voluptate, assumenda quam, natus dolorem eveniet facilis quis error doloremque tempora, recusandae
@@ -194,7 +194,7 @@
 	 -->
 
 	<section class="padding-block-900">
-		<div class="wrapper flex-c align-items-center">
+		<div class="wrapper flex-c align-items-center testimonials">
 			<a href="#">Testimonials</a>
 			<div class="flow flex-c align-items-center">
 				<h2 class="fs-secondary-heading fw-bold text-primary-400">Customer Say</h2>
